--- a/fileReader.html
+++ b/fileReader.html
@@ -22,9 +22,9 @@
             var files = event.target.files;
             
             for (var i = 0; i < files.length; i++) { 
-                var file = files[i];
-
+                var file = files[i],
                 var reader = new FileReader();
+                
                 reader.addEventListener("load", this.load.bind(this));   
                 reader.readAsDataURL(file);
             }           
@@ -33,6 +33,7 @@
         DecodeImg.prototype.load = function (e) {
             var result = e.target.result,
             div = document.createElement("div");
+
             div.innerHTML = "<img class='thumbnail' src='" + result + "'/>";
             this.input.insertAdjacentElement("beforeBegin", div); 
         }
