--- a/fileReader.html
+++ b/fileReader.html
@@ -5,7 +5,7 @@
 	<title>File Reader</title>
 	<style>
 		img {
-			width: 500px;
+			width: 200px;
 			position: relative;
 		}
 	</style>
@@ -22,13 +22,16 @@
             var files = event.target.files;
             
             for (var i = 0; i < files.length; i++) { 
-                var file = files[i],
-                var reader = new FileReader();
-                
-                reader.addEventListener("load", this.load.bind(this));   
-                reader.readAsDataURL(file);
+                this.changeImg(files[i]);
             }           
         }
+
+        DecodeImg.prototype.changeImg = function (files) {
+            var reader = new FileReader();
+
+            reader.addEventListener("load", this.load.bind(this));   
+            reader.readAsDataURL(files);
+        } 
 
         DecodeImg.prototype.load = function (e) {
             var result = e.target.result,
